--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html,
 body,
 div,
@@ -126,4 +125,60 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+* {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+html {
+  font-size: 62.5%;
+}
+html,
+body {
+  font-family: 'Lato', sans-serif;
+  color: black;
+  background: #e7e8e4;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Abril Fatface', cursive;
+  color: #34421e;
+}
+a {
+  text-decoration: none;
+}
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  font-family: 'Lato', sans-serif;
+}
+ul {
+  font-family: 'Lato', sans-serif;
+}
+/* unvisited link */
+a:link {
+  color: #34421e;
+}
+/* visited link */
+a:visited {
+  color: #34421e;
+}
+/* mouse over link */
+a:hover {
+  color: #34421e;
+}
+/* selected link */
+a:active {
+  color: #34421e;
+}
+.container {
+  max-width: 1000px;
+  min-width: 411px;
+  width: 100%;
+  margin: 0 auto;
 }
