--- a/less/variables.less
+++ b/less/variables.less
@@ -30,3 +30,5 @@
 // Mobile var
 @phone: ~'(max-width: 736px)';
 @tablet: ~'(max-width:857px)';
+@desktop: ~'(max-width:1000px)';
+@phone547: ~'(max-width: 547px)';
