Added mediaQ for phone500px in less var

--- a/less/variables.less
+++ b/less/variables.less
@@ -32,3 +32,4 @@
 @tablet: ~'(max-width:857px)';
 @desktop: ~'(max-width:1000px)';
 @phone547: ~'(max-width: 547px)';
+@phone500: ~'(max-width: 500px)';
