--- a/less/main_page.less
+++ b/less/main_page.less
@@ -50,3 +50,20 @@ header {
     }
   }
 }
+.first_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  @media @tablet {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .h2_cont {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 3%;
+    h2 {
+      font-size: 2.4rem;
+    }
+  }
+
