--- a/css/index.css
+++ b/css/index.css
@@ -352,3 +352,115 @@ header .video-container .overlay-desc .cta_btn {
   background: white;
   border-radius: 3px;
 }
+.first_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+@media (max-width:857px) {
+  .first_container {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+.first_container .h2_cont {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 3%;
+}
+.first_container .h2_cont h2 {
+  font-size: 2.4rem;
+}
+.first_container .content_container {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .first_container .content_container {
+    flex-direction: column;
+  }
+}
+.first_container .content_container h3 {
+  font-size: 1.8rem;
+}
+@media (max-width: 500px) {
+  .first_container .content_container h3 {
+    font-size: 2rem;
+  }
+}
+.first_container .content_container p {
+  font-size: 1.4rem;
+}
+@media (max-width: 500px) {
+  .first_container .content_container p {
+    font-size: 1.6rem;
+  }
+}
+.first_container .content_container a {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+@media (max-width: 500px) {
+  .first_container .content_container a {
+    font-size: 1.3rem;
+  }
+}
+.first_container .content_container .all_items_first_cont {
+  width: 30%;
+}
+@media (max-width: 500px) {
+  .first_container .content_container .all_items_first_cont {
+    width: 100%;
+    margin-bottom: 10%;
+  }
+}
+.first_container .content_container .all_items_first_cont img {
+  max-width: 100%;
+  height: auto;
+}
+.second_container {
+  margin-bottom: 5%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+@media (max-width:857px) {
+  .second_container {
+    width: 90%;
+    margin: 5% auto;
+  }
+}
+.second_container h5 {
+  font-size: 1.3rem;
+}
+@media (max-width: 500px) {
+  .second_container h5 {
+    font-size: 1.5rem;
+  }
+}
+.second_container p {
+  font-size: 1.4rem;
+}
+@media (max-width: 500px) {
+  .second_container p {
+    font-size: 1.6rem;
+  }
+}
+.second_container a {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+@media (max-width: 500px) {
+  .second_container a {
+    font-size: 1.3rem;
+  }
+}
+.second_container .h2_cont {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 3%;
+}
+.second_container .h2_cont h2 {
+  font-size: 2.4rem;
+}
