--- a/less/main_page.less
+++ b/less/main_page.less
@@ -66,4 +66,80 @@ header {
       font-size: 2.4rem;
     }
   }
+  .content_container {
+    display: flex;
+    justify-content: space-between;
+    @media @phone500 {
+      flex-direction: column;
+    }
+    h3 {
+      font-size: 1.8rem;
+      @media @phone500 {
+        font-size: 2rem;
+      }
+    }
+    p {
+      font-size: 1.4rem;
+      @media @phone500 {
+        font-size: 1.6rem;
+      }
+    }
+    a {
+      font-weight: 600;
+      font-size: 1.1rem;
+      @media @phone500 {
+        font-size: 1.3rem;
+      }
+    }
+    .all_items_first_cont {
+      width: 30%;
+      @media @phone500 {
+        width: 100%;
+        margin-bottom: 10%;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+    }
+  }
+}
+.second_container {
+  margin-bottom: 5%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  @media @tablet {
+    width: 90%;
+    margin: 5% auto;
+  }
 
+  h5 {
+    font-size: 1.3rem;
+    @media @phone500 {
+      font-size: 1.5rem;
+    }
+  }
+  p {
+    font-size: 1.4rem;
+    @media @phone500 {
+      font-size: 1.6rem;
+    }
+  }
+  a {
+    font-weight: 600;
+    font-size: 1.1rem;
+    @media @phone500 {
+      font-size: 1.3rem;
+    }
+  }
+  .h2_cont {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 3%;
+    h2 {
+      font-size: 2.4rem;
+    }
+  }
+}
