--- a/less/main_page.less
+++ b/less/main_page.less
@@ -142,4 +142,22 @@ header {
       font-size: 2.4rem;
     }
   }
+  .season_container {
+    display: flex;
+    justify-content: space-between;
+    @media @phone500 {
+      flex-direction: column;
+    }
+    .all_items_second_cont {
+      width: 30%;
+      @media @phone500 {
+        width: 100%;
+        margin-bottom: 10%;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+    }
+  }
 }
