--- a/css/index.css
+++ b/css/index.css
@@ -486,3 +486,103 @@ header .video-container .overlay-desc .cta_btn {
   max-width: 100%;
   height: auto;
 }
+.form_container {
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+@media (max-width:857px) {
+  .form_container {
+    width: 90%;
+    margin: 0 auto 5%;
+  }
+}
+.form_container .news_container {
+  display: flex;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: url(/img/news_back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (max-width: 547px) {
+  .form_container .news_container {
+    background-position: center center;
+  }
+}
+.form_container .newsletter_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  align-self: flex-end;
+  flex-direction: column;
+  right: 0;
+  left: 0;
+  position: absolute;
+  height: 72%;
+  width: 70%;
+  margin: 0 auto;
+}
+@media (max-width: 736px) {
+  .form_container .newsletter_container {
+    flex-direction: column;
+  }
+}
+@media (max-width: 547px) {
+  .form_container .newsletter_container {
+    align-self: center;
+    height: 60%;
+    margin: 0;
+    width: 100%;
+  }
+}
+.form_container .newsletter_container h2 {
+  color: white;
+  font-size: 2.4rem;
+  text-align: center;
+}
+@media (max-width: 736px) {
+  .form_container .newsletter_container h2 {
+    font-size: 1.8rem;
+  }
+}
+.form_container .newsletter_container p {
+  text-align: center;
+  color: white;
+}
+@media (max-width: 547px) {
+  .form_container .newsletter_container p {
+    display: none;
+  }
+}
+.form_container .newsletter_container .newsletter {
+  display: flex;
+}
+@media (max-width: 547px) {
+  .form_container .newsletter_container .newsletter {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.form_container .newsletter_container .newsletter input[type='text'] {
+  color: white;
+  background: transparent;
+  border: none;
+  height: 40px;
+}
+.form_container .newsletter_container .newsletter ::placeholder {
+  color: white;
+  opacity: 1;
+  text-align: center;
+}
+.form_container .newsletter_container .newsletter .sub_btn {
+  margin-bottom: 4px;
+  background: white;
+  padding: 5px;
+  width: 80px;
+  border: 1px solid white;
+  cursor: pointer;
+}
