--- a/less/navigation.less
+++ b/less/navigation.less
@@ -55,10 +55,11 @@
     }
   }
   .nav_menu_right {
-    padding-left: 55px;
+    // padding-left: 25px;
     display: flex;
     width: 35%;
     align-items: center;
+    justify-content: space-between;
     @media @tablet {
       padding-left: 10px;
     }
@@ -72,17 +73,18 @@
     a {
       font-size: 1.5rem;
       @media @phone {
-        font-size: 2.7rem;
+        font-size: 2.1rem;
       }
     }
     .gold_btn {
       background: @navRightBtn;
       text-align: center;
-      margin-left: 50px;
+      margin-left: 10px;
       border-radius: 3px;
       padding: 5px;
       @media @phone {
         margin-left: 0;
+        margin-top: 4px;
       }
 
       a {
