--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,7 +15,7 @@
   }
   .nav_menu_left {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 33%;
     @media @phone {
       flex-direction: column;
