Updated header description

--- a/less/main_page.less
+++ b/less/main_page.less
@@ -26,8 +26,29 @@ header {
         font-size: 6rem;
         text-align: center;
         width: 67%;
+        @media @phone {
+          font-size: 5rem;
+        }
         @media @phone547 {
+          font-size: 4.5rem;
+        }
+        @media @phone500 {
           font-size: 3.5rem;
+        }
+      }
+      h2 {
+        color: white;
+        font-size: 4rem;
+        text-align: center;
+        width: 67%;
+        @media @phone {
+          font-size: 3rem;
+        }
+        @media @phone547 {
+          font-size: 2.5rem;
+        }
+        @media @phone500 {
+          font-size: 1.5rem;
         }
       }
       .cta_btn_container {
