--- a/css/index.css
+++ b/css/index.css
@@ -329,9 +329,40 @@ header .video-container .overlay-desc h1 {
   text-align: center;
   width: 67%;
 }
+@media (max-width: 785px) {
+  header .video-container .overlay-desc h1 {
+    font-size: 5rem;
+  }
+}
 @media (max-width: 547px) {
   header .video-container .overlay-desc h1 {
+    font-size: 4.5rem;
+  }
+}
+@media (max-width: 500px) {
+  header .video-container .overlay-desc h1 {
     font-size: 3.5rem;
+  }
+}
+header .video-container .overlay-desc h2 {
+  color: white;
+  font-size: 4rem;
+  text-align: center;
+  width: 67%;
+}
+@media (max-width: 785px) {
+  header .video-container .overlay-desc h2 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 547px) {
+  header .video-container .overlay-desc h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 500px) {
+  header .video-container .overlay-desc h2 {
+    font-size: 1.5rem;
   }
 }
 header .video-container .overlay-desc .cta_btn_container {
