Added version with logo

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -38,21 +38,27 @@
     display: flex;
     justify-content: center;
     width: 32%;
+    background: url(/img/logo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 50px;
+    height: 90px;
+    width: 90px;
     @media @phone {
       order: -1;
-      width: 100%;
+      // width: 100%;
     }
 
-    h1 {
-      text-align: center;
-      font-size: 4.4rem;
-      @media @tablet {
-        font-size: 4rem;
-      }
-      @media @phone {
-        font-size: 4.4rem;
-      }
-    }
+    // h1 {
+    //   text-align: center;
+    //   font-size: 4.4rem;
+    //   @media @tablet {
+    //     font-size: 4rem;
+    //   }
+    //   @media @phone {
+    //     font-size: 4.4rem;
+    //   }
+    // }
   }
   .nav_menu_right {
     // padding-left: 25px;
