--- a/css/index.css
+++ b/css/index.css
@@ -230,25 +230,16 @@ a:active {
   display: flex;
   justify-content: center;
   width: 32%;
+  background: url(/img/logo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 50px;
+  height: 90px;
+  width: 90px;
 }
 @media (max-width: 785px) {
   .navigation .logo_txt {
     order: -1;
-    width: 100%;
-  }
-}
-.navigation .logo_txt h1 {
-  text-align: center;
-  font-size: 4.4rem;
-}
-@media (max-width:883px) {
-  .navigation .logo_txt h1 {
-    font-size: 4rem;
-  }
-}
-@media (max-width: 785px) {
-  .navigation .logo_txt h1 {
-    font-size: 4.4rem;
   }
 }
 .navigation .nav_menu_right {
@@ -296,7 +287,7 @@ a:active {
   padding: 5px;
 }
 header .video-container {
-  margin-top: 7%;
+  margin-top: 9%;
   margin-bottom: 5%;
   position: relative;
 }
