Added HTML markup to about page

--- a/less/index.less
+++ b/less/index.less
@@ -4,5 +4,6 @@
 @import 'global.less';
 @import 'navigation.less';
 @import 'main_page.less';
+@import 'about_page.less';
 @import 'newsletter.less';
 @import 'footer.less';
