--- a/less/navigation.less
+++ b/less/navigation.less
@@ -44,6 +44,7 @@
     margin: 0 50px;
     height: 90px;
     width: 90px;
+    cursor: pointer;
     @media @phone {
       order: -1;
       // width: 100%;
