--- a/css/index.css
+++ b/css/index.css
@@ -236,6 +236,7 @@ a:active {
   margin: 0 50px;
   height: 90px;
   width: 90px;
+  cursor: pointer;
 }
 @media (max-width: 785px) {
   .navigation .logo_txt {
