--- a/css/index.css
+++ b/css/index.css
@@ -510,6 +510,23 @@ header .video-container .overlay-desc .cta_btn {
   max-width: 100%;
   height: auto;
 }
+.content_main {
+  border: 1px solid red;
+  margin-top: 9%;
+  width: 100%;
+}
+.developers_container {
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.developers_container .developer_items {
+  width: 50%;
+  font-size: 2rem;
+}
 .form_container {
   margin-bottom: 5%;
   display: flex;
