--- a/css/index.css
+++ b/css/index.css
@@ -515,17 +515,33 @@ header .video-container .overlay-desc .cta_btn {
   margin-top: 9%;
   width: 100%;
 }
+.content_main h1 {
+  font-size: 2.4rem;
+}
 .developers_container {
-  margin-top: 5%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 auto;
 }
 .developers_container .developer_items {
-  width: 50%;
+  margin-top: 15%;
+  width: auto;
   font-size: 2rem;
+}
+.developers_container .developer_items .person_name {
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+.developers_container .developer_items .person_position {
+  font-size: 0.875em;
+  line-height: 1.71;
+  margin-top: 4px;
+  color: #999;
 }
 .form_container {
   margin-bottom: 5%;
