--- a/less/about_page.less
+++ b/less/about_page.less
@@ -2,16 +2,32 @@
   border: 1px solid red;
   margin-top: 9%;
   width: 100%;
+  h1 {
+    font-size: 2.4rem;
+  }
 }
 .developers_container {
-  margin-top: 5%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 auto;
   .developer_items {
-    width: 50%;
+    margin-top: 15%;
+    width: auto;
     font-size: 2rem;
+    .person_name {
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 1.6rem;
+    }
+    .person_position {
+      font-size: 0.875em;
+      line-height: 1.71;
+      margin-top: 4px;
+      color: #999;
+    }
   }
 }
