--- a/css/index.css
+++ b/css/index.css
@@ -518,6 +518,9 @@ header .video-container .overlay-desc .cta_btn {
 .content_main h1 {
   font-size: 2.4rem;
 }
+.content_main .img_team_container {
+  width: 100%;
+}
 .developers_container {
   display: flex;
   justify-content: space-between;
