--- a/css/index.css
+++ b/css/index.css
@@ -511,7 +511,6 @@ header .video-container .overlay-desc .cta_btn {
   height: auto;
 }
 .content_main {
-  border: 1px solid red;
   margin-top: 9%;
   width: 100%;
 }
@@ -519,7 +518,28 @@ header .video-container .overlay-desc .cta_btn {
   font-size: 2.4rem;
 }
 .content_main .img_team_container {
+  display: flex;
+  position: relative;
+  vertical-align: middle;
   width: 100%;
+}
+.content_main .img_team_container .team_description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.content_main .img_team_container .team_description p {
+  color: white;
+  font-size: 2.6rem;
+  text-align: left;
+  width: 67%;
+  line-height: 28px;
 }
 .developers_container {
   display: flex;
@@ -531,7 +551,7 @@ header .video-container .overlay-desc .cta_btn {
   margin: 0 auto;
 }
 .developers_container .developer_items {
-  margin-top: 15%;
+  margin-top: 5%;
   width: auto;
   font-size: 2rem;
 }
