--- a/less/about_page.less
+++ b/less/about_page.less
@@ -1,12 +1,30 @@
 .content_main {
-  border: 1px solid red;
   margin-top: 9%;
   width: 100%;
   h1 {
     font-size: 2.4rem;
   }
   .img_team_container {
+    display: flex;
+    position: relative;
+    vertical-align: middle;
     width: 100%;
+    .team_description {
+      .flexContainerCenter(center, center);
+      flex-flow: column;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      p {
+        color: @h1ColorHeader;
+        font-size: 2.6rem;
+        text-align: left;
+        width: 67%;
+        line-height: 28px;
+      }
+    }
   }
 }
 .developers_container {
@@ -18,7 +36,7 @@
   flex-direction: row;
   margin: 0 auto;
   .developer_items {
-    margin-top: 15%;
+    margin-top: 5%;
     width: auto;
     font-size: 2rem;
     .person_name {
