Added wrapper to developers section and marings top/bot

--- a/less/about_page.less
+++ b/less/about_page.less
@@ -1,9 +1,7 @@
 .content_main {
   margin-top: 9%;
   width: 100%;
-  h1 {
-    font-size: 2.4rem;
-  }
+
   .img_team_container {
     display: flex;
     position: relative;
@@ -27,28 +25,35 @@
     }
   }
 }
-.developers_container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin: 0 auto;
-  .developer_items {
-    margin-top: 5%;
-    width: auto;
-    font-size: 2rem;
-    .person_name {
-      margin-top: 10px;
-      font-weight: bold;
-      font-size: 1.6rem;
-    }
-    .person_position {
-      font-size: 0.875em;
-      line-height: 1.71;
-      margin-top: 4px;
-      color: #999;
+.wrapper {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  h1 {
+    font-size: 2.2rem;
+  }
+  .developers_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 auto;
+    .developer_items {
+      margin-top: 5%;
+      width: auto;
+      font-size: 2rem;
+      .person_name {
+        margin-top: 10px;
+        font-weight: bold;
+        font-size: 1.6rem;
+      }
+      .person_position {
+        font-size: 0.875em;
+        line-height: 1.71;
+        margin-top: 4px;
+        color: #999;
+      }
     }
   }
 }
