--- a/css/index.css
+++ b/css/index.css
@@ -514,9 +514,6 @@ header .video-container .overlay-desc .cta_btn {
   margin-top: 9%;
   width: 100%;
 }
-.content_main h1 {
-  font-size: 2.4rem;
-}
 .content_main .img_team_container {
   display: flex;
   position: relative;
@@ -541,7 +538,14 @@ header .video-container .overlay-desc .cta_btn {
   width: 67%;
   line-height: 28px;
 }
-.developers_container {
+.wrapper {
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+.wrapper h1 {
+  font-size: 2.2rem;
+}
+.wrapper .developers_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -550,17 +554,17 @@ header .video-container .overlay-desc .cta_btn {
   flex-direction: row;
   margin: 0 auto;
 }
-.developers_container .developer_items {
+.wrapper .developers_container .developer_items {
   margin-top: 5%;
   width: auto;
   font-size: 2rem;
 }
-.developers_container .developer_items .person_name {
+.wrapper .developers_container .developer_items .person_name {
   margin-top: 10px;
   font-weight: bold;
   font-size: 1.6rem;
 }
-.developers_container .developer_items .person_position {
+.wrapper .developers_container .developer_items .person_position {
   font-size: 0.875em;
   line-height: 1.71;
   margin-top: 4px;
