Added mediaQ phone500 for header p tag

--- a/less/about_page.less
+++ b/less/about_page.less
@@ -21,6 +21,10 @@
         text-align: left;
         width: 67%;
         line-height: 28px;
+        @media @phone500 {
+          font-size: 1.6;
+          width: 90%;
+        }
       }
     }
   }
