--- a/css/index.css
+++ b/css/index.css
@@ -538,6 +538,12 @@ header .video-container .overlay-desc .cta_btn {
   width: 67%;
   line-height: 28px;
 }
+@media (max-width: 500px) {
+  .content_main .img_team_container .team_description p {
+    font-size: 1.6;
+    width: 90%;
+  }
+}
 .wrapper {
   margin-top: 3%;
   margin-bottom: 3%;
