--- a/less/navigation.less
+++ b/less/navigation.less
@@ -46,7 +46,7 @@
     width: 90px;
     cursor: pointer;
     @media @phone {
-      order: -1;
+      // order: -1;
       // width: 100%;
     }
 
@@ -80,7 +80,7 @@
     a {
       font-size: 1.5rem;
       @media @phone {
-        font-size: 2.1rem;
+        font-size: 2.7rem;
       }
     }
     .gold_btn {
@@ -92,6 +92,7 @@
       @media @phone {
         margin-left: 0;
         margin-top: 4px;
+        width: 170px;
       }
 
       a {
