--- a/less/about_page.less
+++ b/less/about_page.less
@@ -32,6 +32,10 @@
 .wrapper {
   margin-top: 3%;
   margin-bottom: 3%;
+  @media @phone {
+    margin-left: 3%;
+    margin-right: 3%;
+  }
   h1 {
     font-size: 2.2rem;
   }
