Added box shadow to btn

--- a/less/main_page.less
+++ b/less/main_page.less
@@ -67,6 +67,11 @@ header {
         text-align: center;
         background: @btnColorHeader;
         border-radius: 3px;
+        box-shadow: 0px 15px 20px black;
+        &:hover {
+          background: darken(@btnColorHeader, 20%);
+          transform: translateY(3px);
+        }
       }
     }
   }
