--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,12 @@ a:active {
   margin-left: 10px;
   border-radius: 3px;
   padding: 5px;
+  box-shadow: 0px 15px 20px #cdddb5;
+}
+.navigation .nav_menu_right .gold_btn:hover {
+  background: #ca9c3a;
+  background-color: #2ee59d;
+  transform: translateY(3px);
 }
 @media (max-width: 785px) {
   .navigation .nav_menu_right .gold_btn {
@@ -373,6 +379,11 @@ header .video-container .overlay-desc .cta_btn {
   text-align: center;
   background: white;
   border-radius: 3px;
+  box-shadow: 0px 15px 20px black;
+}
+header .video-container .overlay-desc .cta_btn:hover {
+  background: #cccccc;
+  transform: translateY(3px);
 }
 .first_container {
   display: flex;
