--- a/less/navigation.less
+++ b/less/navigation.less
@@ -89,6 +89,12 @@
       margin-left: 10px;
       border-radius: 3px;
       padding: 5px;
+      box-shadow: 0px 15px 20px lighten(@darkGreen, 60%);
+      &:hover {
+        background: lighten(@navRightBtn, 3%);
+        background-color: #2ee59d;
+        transform: translateY(3px);
+      }
       @media @phone {
         margin-left: 0;
         margin-top: 4px;
