--- a/less/about_page.less
+++ b/less/about_page.less
@@ -1,7 +1,6 @@
 .content_main {
   margin-top: 9%;
   width: 100%;
-
   .img_team_container {
     display: flex;
     position: relative;
@@ -27,50 +26,72 @@
         }
       }
     }
-  }
-}
-.wrapper {
-  margin-top: 3%;
-  margin-bottom: 3%;
-  @media @phone {
-    margin-left: 3%;
-    margin-right: 3%;
-  }
-  h1 {
-    font-size: 2.2rem;
-  }
-  .developers_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: 0 auto;
-    @media @phone500 {
-      flex-direction: column;
-    }
-    .developer_items {
-      margin-top: 5%;
-      font-size: 2rem;
-      width: 23%;
-      @media @phone500 {
-        width: 100%;
-      }
-      .web_developer_img {
-        max-width: 100%;
-        height: auto;
-      }
-      .person_name {
-        margin-top: 10px;
+    .meetus_btn {
+      margin-top: 12px;
+      background: white;
+      width: 120px;
+      height: 30px;
+      border-radius: 5px;
+      text-align: center;
+      box-shadow: 0px 15px 20px black;
+      cursor: pointer;
+      span {
+        font-size: 2rem;
         font-weight: bold;
-        font-size: 1.6rem;
+        color: black;
       }
-      .person_position {
-        font-size: 0.875em;
-        line-height: 1.71;
-        margin-top: 4px;
-        color: #999;
+      &:hover {
+        background: darken(white, 15%);
+        transform: translateY(1px);
+      }
+    }
+  }
+  .wrapper {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    @media @phone {
+      margin-left: 3%;
+      margin-right: 3%;
+    }
+    h1 {
+      font-size: 2.2rem;
+    }
+    .developers_container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      flex-wrap: wrap;
+      flex-direction: row;
+      margin: 0 auto;
+      @media @phone500 {
+        flex-direction: column;
+      }
+      .developer_items {
+        margin-top: 5%;
+        font-size: 2rem;
+        width: 23%;
+        @media @phone500 {
+          width: 100%;
+        }
+        .web_developer_img {
+          max-width: 100%;
+          height: auto;
+        }
+        .person_name {
+          margin-top: 10px;
+          font-weight: bold;
+          font-size: 1.6rem;
+        }
+        .person_position {
+          font-size: 0.875em;
+          line-height: 1.7;
+          margin-top: 4px;
+          color: #999;
+        }
+        .person_github {
+          font-size: 0.775em;
+        }
       }
     }
   }
