--- a/less/about_page.less
+++ b/less/about_page.less
@@ -91,6 +91,11 @@
         }
         .person_github {
           font-size: 0.775em;
+          a {
+            &:hover {
+              color: lighten(@darkGreen, 10%);
+            }
+          }
         }
       }
     }
