--- a/less/main_page.less
+++ b/less/main_page.less
@@ -121,6 +121,9 @@ header {
     a {
       font-weight: 600;
       font-size: 1.3rem;
+      &:hover {
+        color: lighten(darkGreen, 10%);
+      }
     }
     .all_items_first_cont {
       width: 30%;
