--- a/less/about_page.less
+++ b/less/about_page.less
@@ -58,7 +58,7 @@
     }
     .developers_container {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: center;
       width: 100%;
       flex-wrap: wrap;
