--- a/less/main.less
+++ b/less/main.less
@@ -7,7 +7,7 @@ html{
     margin: 0 auto
 }
 body{
-background-image:url(foodbackground.jpg);
+background-image:url(../foodbackground.jpg);
 
 }
 .topnav{
