--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ p {
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  background: pink;
+  background: white;
   border: 1px double #e0e0e0;
   max-width: 100%;
   width: 100%;
