--- a/less/about.less
+++ b/less/about.less
@@ -129,7 +129,7 @@ html {
     border-radius: 10px;
   }
   @media (max-width: 1000px){
-    .home .space-images .food {
+    .home .space-images .blast {
         max-width: 100%;
         width: 100%;
       }
@@ -207,4 +207,3 @@ html {
       justify-content: space-between;
     }
   }
- 
