--- a/less/about_page.less
+++ b/less/about_page.less
@@ -6,6 +6,9 @@
     position: relative;
     vertical-align: middle;
     width: 100%;
+    img {
+      max-width: 100%;
+    }
     .team_description {
       .flexContainerCenter(center, center);
       flex-flow: column;
