--- a/css/index.css
+++ b/css/index.css
@@ -5,13 +5,13 @@
   font-display: swap;
   src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
 }
-@im html {
+html {
   font-size: 62.5%;
   width: 80%;
   margin: 0 auto;
 }
 body {
-  background-image: url(../foodbackground.jpg);
+  background-image: url(/images/foodbackground.jpg);
 }
 .topnav {
   display: flex;
@@ -28,9 +28,27 @@ a {
   padding: 2rem;
   color: olive;
 }
+.topnav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: space-around;
+  align-items: baseline;
+}
+.topnav .cookpic {
+  height: auto;
+  width: auto;
+  max-height: 10rem;
+  max-width: 25rem;
+}
 .middlepageText {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
   font-size: 3.5rem;
   font-family: Apple Chancery, cursive;
+}
+.calltoAction {
+  font-size: 3rem;
+  color: navy;
 }
