--- a/less/main.less
+++ b/less/main.less
@@ -7,7 +7,7 @@ html{
     margin: 0 auto
 }
 body{
-background-image:url(../foodbackground.jpg);
+background-image:url(/images/foodbackground.jpg);
 
 }
 .topnav{
@@ -25,12 +25,33 @@ background-image:url(../foodbackground.jpg);
 a{
     text-decoration: none;
     padding: 2rem;
-    color: olive;
+    color:@navcolor;
+}
+
+.topnav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: space-around;
+    align-items: baseline;
+    .cookpic{
+        height: auto;
+    width: auto;
+    max-height: 10rem;
+    max-width: 25rem;
+    }
 }
 
 .middlepageText{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
     font-size: 3.5rem;
-    font-family: Apple Chancery, cursive;
+    font-family: @textfont;
+}
+
+.calltoAction{
+    font-size: @calltoactionsize;
+    color: @calltoactioncolor
+    
 }
