--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ html {
 html,
 body {
   font-family: 'Indie Flower', cursive;
+  color: #5E6164;
   background-color: #a7c9cf;
 }
 h1,
@@ -29,29 +30,167 @@ p {
   width: 100%;
   margin: 0 auto;
 }
-.Containnav {
+.containnav {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  background: white;
+  background-color: pink;
   border: 1px double #e0e0e0;
   max-width: 100%;
   width: 100%;
 }
-.Containnav a {
+.containnav a {
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 3rem;
   color: black;
-  padding: 2em;
 }
-.Containnav h1 {
+.containnav h1 {
   font-size: 4rem;
 }
-.Containnav nav {
+.containnav nav {
   display: flex;
   justify-content: space-evenly;
   max-width: 100%;
+}
+footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .intro h2 {
+  padding: 15px;
+}
+.home .intro p {
+  padding: 0 15px;
+}
+.home .space-images {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.home .space-images img {
+  width: 28%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
+.home .visit-planets {
+  padding: 15px;
+}
+.home .visit-planets h3 {
+  margin-top: 11px;
+}
+.home .visit-planets p {
+  margin-top: 13px;
+}
+.home .walk {
+  margin-top: 60px;
+  border-top: 1px solid #dee2e6;
+  padding: 50px 60px;
+  display: flex;
+  justify-content: center;
+}
+.home .walk .walk-text {
+  width: 50%;
+}
+.home .walk .walk-text h3 {
+  margin-bottom: 10px;
+}
+.home .walk .walk-text p {
+  margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  font-size: 1.5rem;
+  border-radius: 4px;
+  background-color: black;
+  color: white;
+  padding: 5px;
+  width: 25%;
+}
+.home .walk .walk-text .btn:hover {
+  color: black;
+  background-color: white;
+}
+.home .walk .walk-text .girl-img {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+@media (max-width: 500px) {
+  cake-images {
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  cake-images .bork {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .blast {
+    display: none;
+  }
+}
+html {
+  font-size: 62.5%;
+}
+html,
+body {
+  font-family: 'Indie Flower', cursive;
+  color: #5E6164;
+  background-color: #a7c9cf;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Vollkorn', serif;
+  color: #23293B;
+}
+h2 {
+  font-size: 3.2rem;
+}
+h3 {
+  font-size: 2.8rem;
+}
+p {
+  font-size: 1.6rem;
+  line-height: 1.4;
+}
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+.containnav {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border: 1px double #e0e0e0;
+  max-width: 100%;
+  width: 100%;
+}
+.containnav a {
+  text-decoration: none;
+  font-size: 3rem;
+  color: black;
+}
+.containnav h1 {
+  font-size: 4rem;
+}
+.containnav nav {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
 }
 footer {
   color: #22283B;
@@ -127,41 +266,8 @@ footer {
   border-radius: 10px;
 }
 @media (max-width: 500px) {
-  .home .space-images .blast {
-    max-width: 100%;
-    width: 100%;
-  }
-  .home .space-images .sky {
-    display: none;
-  }
-  .home .space-images .launch {
-    display: none;
-  }
-  .home .walk {
-    display: flex;
-    flex-flow: column wrap;
-    max-width: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0 auto;
-  }
-  .home .walk .walk-text {
-    max-width: 100%;
-    width: 100%;
-    order: 2;
-  }
-  .home .walk .walk-text .btn {
-    max-width: 90%;
-    width: 90%;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-  .home .walk .walk-img {
-    max-width: 100%;
-    width: 100%;
-    order: 1;
-    margin: 0 auto;
+  .space-images {
+    flex-direction: column;
+    align-items: center;
   }
 }
