added a video to my front page

--- a/less/about.less
+++ b/less/about.less
@@ -36,7 +36,7 @@ html {
     flex-flow: column wrap;
     justify-content: space-around;
     align-items: center;
-    background-color: white;
+    background-color: hite;
     border: 1px double #e0e0e0;
     max-width: 100%;
     width: 100%;
@@ -135,3 +135,46 @@ html {
       align-items: center;
     }
   }
+// .cupcake{
+//   @media (max-width: 500px){
+//     flex-direction: column;
+//     align-items: center;
+//     width: 10px;
+//   }
+// }
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    max-width: 100%;
+    width: 100%;
+  }
+  .home .space-images .sky {
+    border-radius: 20px;
+  }
+  .home .walk {
+    display: flex;
+    flex-flow: column wrap;
+    max-width: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0 auto;
+  }
+  .home .walk .walk-text {
+    max-width: 100%;
+    width: 100%;
+    order: 2;
+  }
+  .home .walk .walk-text .btn {
+    max-width: 90%;
+    width: 90%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .home .walk .walk-img {
+    max-width: 100%;
+    width: 100%;
+    order: 1;
+    margin: 0 auto;
+  }
+}
