--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ p {
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  background-color: pink;
+  background-color: white;
   border: 1px double #e0e0e0;
   max-width: 100%;
   width: 100%;
@@ -53,6 +53,10 @@ p {
   justify-content: space-evenly;
   max-width: 100%;
 }
+.rachel-rey {
+  display: flex;
+  justify-content: center;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -69,13 +73,21 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
-.home .space-images {
+.home .cake-images {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   width: 100%;
 }
-.home .space-images img {
+.home .cake-images .blast {
   width: 28%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
+.home .cake-images img {
+  width: 60%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
@@ -128,13 +140,19 @@ footer {
   }
 }
 @media (max-width: 500px) {
-  cake-images .bork {
+  .bork {
     display: none;
   }
 }
 @media (max-width: 500px) {
   .blast {
     display: none;
+  }
+}
+@media (max-width: 500px) {
+  .sky {
+    max-width: 100%;
+    width: 300px;
   }
 }
 html {
@@ -174,7 +192,7 @@ p {
   flex-flow: column wrap;
   justify-content: space-around;
   align-items: center;
-  background-color: white;
+  background-color: hite;
   border: 1px double #e0e0e0;
   max-width: 100%;
   width: 100%;
@@ -269,5 +287,41 @@ footer {
   .space-images {
     flex-direction: column;
     align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    max-width: 100%;
+    width: 100%;
+  }
+  .home .space-images .sky {
+    border-radius: 20px;
+  }
+  .home .walk {
+    display: flex;
+    flex-flow: column wrap;
+    max-width: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0 auto;
+  }
+  .home .walk .walk-text {
+    max-width: 100%;
+    width: 100%;
+    order: 2;
+  }
+  .home .walk .walk-text .btn {
+    max-width: 90%;
+    width: 90%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .home .walk .walk-img {
+    max-width: 100%;
+    width: 100%;
+    order: 1;
+    margin: 0 auto;
   }
 }
