--- a/css/index.css
+++ b/css/index.css
@@ -301,8 +301,6 @@ footer {
     display: flex;
     flex-flow: column wrap;
     max-width: 100%;
-    width: 100%;
-    padding: 0;
     margin: 0 auto;
   }
   .home .walk .walk-text {
@@ -323,5 +321,13 @@ footer {
     width: 100%;
     order: 1;
     margin: 0 auto;
+  }
+  .cupcake {
+    width: 560px;
+    height: 315px;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
   }
 }
