--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,10 @@ footer {
   height: auto;
   margin: 0 auto;
 }
+#txt {
+  display: flex;
+  font-size: 4rem;
+}
 @media (max-width: 500px) {
   cake-images {
     flex-direction: column;
@@ -270,6 +274,19 @@ footer {
   padding: 5px;
   width: 25%;
 }
+.btn {
+  font-size: 1.5rem;
+  border-radius: 4px;
+  background-color: black;
+  color: white;
+  padding: 5px;
+  width: 25%;
+  height: 60px;
+}
+.btn:hover {
+  color: black;
+  background-color: white;
+}
 .home .walk .walk-text .btn:hover {
   color: black;
   background-color: white;
@@ -288,6 +305,11 @@ footer {
     flex-direction: column;
     align-items: center;
   }
+}
+form {
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
 }
 @media (max-width: 500px) {
   .home .space-images .blast {
@@ -322,12 +344,17 @@ footer {
     order: 1;
     margin: 0 auto;
   }
-  .cupcake {
-    width: 560px;
-    height: 315px;
-    border-top-width: 0px;
-    border-right-width: 0px;
-    border-bottom-width: 0px;
-    border-left-width: 0px;
+  .iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
+  }
+  .iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
