--- a/less/about.less
+++ b/less/about.less
@@ -115,6 +115,20 @@ html {
     padding: 5px;
     width: 25%;
   }
+  .btn{
+    font-size: 1.5rem;
+    border-radius: 4px;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    width: 25%;
+    height: 60px;
+    
+  }
+  .btn:hover{
+    color: black;
+    background-color: white;
+  }
   .home .walk .walk-text .btn:hover {
     color: black;
     background-color: white;
@@ -135,13 +149,12 @@ html {
       align-items: center;
     }
   }
-// .cupcake{
-//   @media (max-width: 500px){
-//     flex-direction: column;
-//     align-items: center;
-//     width: 10px;
-//   }
-// }
+  form{
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+
+  }
 @media (max-width: 500px) {
   .home .space-images .blast {
     max-width: 100%;
@@ -175,12 +188,18 @@ html {
     order: 1;
     margin: 0 auto;
   }
-  .cupcake{
-    width: 560px;
-    height: 315px;
-    border-top-width: 0px;
-    border-right-width: 0px;
-    border-bottom-width: 0px;
-    border-left-width: 0px;
+  .iframe-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
   }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 }
