--- a/less/main.less
+++ b/less/main.less
@@ -136,7 +136,10 @@ html {
     margin: 0 auto;
   }
     
-  
+  #txt{
+    display: flex;
+    font-size: 4rem;
+  }
   
     cake-images {
         @media (max-width: 500px){
