--- a/less/main.less
+++ b/less/main.less
@@ -55,3 +55,10 @@ a{
     color: @calltoactioncolor
     
 }
+@media (max-width: 500px){
+    .topnav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
