--- a/less/about.less
+++ b/less/about.less
@@ -1,4 +1,80 @@
 h1{
     color:@calltoactioncolor;
-    font-family: Bradley Hand, cursive
+    font-family: Bradley Hand, cursive;
+    font-size: 5rem;
 }
+
+.topofAbout{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.teampic{
+height: auto;
+width: auto;
+max-height: 10rem;
+max-width: 25rem;
+}
+.contentofAbout{
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+ h1{
+     background-color: red;
+     width: 350px;
+ }
+}
+// }
+// .developers_container {
+//     display: flex;
+//     justify-content: space-evenly;
+//     align-items: center;
+//     width: 100%;
+//     flex-wrap: wrap;
+//     flex-direction: row;
+//     margin: 0 auto;
+//     @media @phone500 {
+//       flex-direction: column;
+//     }
+//     .developer_items {
+//       margin-top: 5%;
+//       font-size: 2rem;
+//       width: 23%;
+//       @media @phone500 {
+//         width: 100%;
+//       }
+//       .web_developer_img {
+//         max-width: 100%;
+//         height: auto;
+//       }
+//       .person_name {
+//         margin-top: 10px;
+//         font-weight: bold;
+//         font-size: 1.6rem;
+//       }
+//       .person_position {
+//         font-size: 0.875em;
+//         line-height: 1.7;
+//         margin-top: 4px;
+//         color: #999;
+//       }
+//       .person_github {
+//         font-size: 0.775em;
+//         a {
+//           &:hover {
+//             color: lighten(@darkGreen, 10%);
+//           }
+//         }
+//       }
+//     }
+//   }
+
+
+
+
+
+
