--- a/less/main.less
+++ b/less/main.less
@@ -13,7 +13,7 @@ html {
   h4,
   h5 {
     font-family: 'Vollkorn', serif;
-    color: #23293B;
+    color: @h1color;
   }
   h2 {
     font-size: 3.2rem;
